@@ -15,6 +15,7 @@
     * Blocking field is moved from IO::Socket to IO::Handle.
     * Remove sysread and sysread method from IO::Handle and IO::Socket.
     * trancate method in IO::Handle class throws excetpion. This implementation is moved to IO::File.
+    * sync method in IO::Handle class throws excetpion. This implementation is moved to IO::File.
 0.211002 2023-12-07
   [Prerequirement Changes]
     * Require SPVM::Sys 0.510.
